--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">TCA</string>
-    <string name = "company_name">TeachersClubApp</string>
+    <string name="company_name">TeachersClubApp</string>
     <string name="Image">logo</string>
     <string name="login_signup">Login/Signup</string>
     <string name="enter_email">Enter Email</string>
@@ -9,4 +9,9 @@
     <string name="google">google</string>
     <string name="facebook">facebook</string>
     <string name="message_1">Continue without signing in</string>
+    <string name="dashboard1">Add Job</string>
+    <string name="description_2">add_job</string>
+    <string name="home">home</string>
+    <string name="notification">notification</string>
+    <string name="profile">profile</string>
 </resources>
