Competed The notification page

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,4 +42,5 @@
     <string name="card1_db_7">Type</string>
     <string name="message_sign_in">You are not logged in. Please Sign in by clicking on the button below</string>
     <string name="button_sign_in">Sign In</string>
+    <string name="notify_1">Notification</string>
 </resources>
