--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,4 +56,8 @@
     <string name="document_2">Enter description about your document</string>
     <string name="document_3">Upload</string>
     <string name="document_4">No file selected</string>
+    <string name="card_doc_1">Download</string>
+    <string name="card_doc_2">Document info comes here</string>
+    <string name="card_doc_3">Uploaded on xx:xx:xxxx</string>
+    <string name="delete">delete</string>
 </resources>
