--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -64,4 +64,6 @@
     <string name="card5_2">Job Title</string>
     <string name="card5_3">Status:open/close</string>
     <string name="card5_4">close</string>
+    <string name="card4_2">Status:Not Known</string>
+    <string name="card4_1">Applied on xx:xx:xxxx</string>
 </resources>
