--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -67,4 +67,5 @@
     <string name="card4_2">Status:Not Known</string>
     <string name="card4_1">Applied on xx:xx:xxxx</string>
     <string name="card4_3">message</string>
+    <string name="ui9_1">About Job</string>
 </resources>
