--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -68,4 +68,5 @@
     <string name="card4_1">Applied on xx:xx:xxxx</string>
     <string name="card4_3">message</string>
     <string name="ui9_1">About Job</string>
+    <string name="ui10_1">Job Applicants</string>
 </resources>
