Completed the ui for card message

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -75,4 +75,6 @@
     <string name="card6_4">Accept</string>
     <string name="card6_5">Reject</string>
     <string name="card6_6">Reset</string>
+    <string name="card7_2">sent on xx:xx:xxxx</string>
+    <string name="card7_4">message</string>
 </resources>
