completed the update page ui

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -81,4 +81,5 @@
     <string name="ui12_1">Update</string>
     <string name="ui12_2">Message</string>
     <string name="ui12_3">update</string>
+    <string name="ui1_1">Forgot Password</string>
 </resources>
